--- a/MEAN/MEAN8/src/app/video-center/video-center.component.html
+++ b/MEAN/MEAN8/src/app/video-center/video-center.component.html
@@ -1,1 +1,8 @@
-<p>video-center works!</p>
+<div class="row">
+    <div class="col-sm-9">
+        <video-detail *ngIf="selectedVideo" [video]="selectedVideo"></video-detail>
+    </div>
+    <div class="col-sm-3">
+        <video-list (SelectVideo)="onSelectVideo($event)" [videos]="videos"></video-list>
+    </div>
+</div>
